[package]
name = "auditor-priority-plugin"
version = "0.4.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Priority Plugin for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-priority-plugin"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
auditor = { path = "../../auditor", version = "0.4.0" }
actix-web = "4.5.1"
config = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["chrono_0_4"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
chrono = { version = "0.4.33", default-features = false, features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
num-traits = "^0.2"
anyhow = "1"
shell-words = "^1"
actix-web-opentelemetry = { version = "0.16", features = ["metrics", "metrics-prometheus"] }
opentelemetry = "0.21"
opentelemetry_api = "0.20.0"
opentelemetry_sdk = "0.21.2"
tracing-actix-web = "0.7"
prometheus = "0.13"
opentelemetry-prometheus = "0.14"

[dev-dependencies]
