[package]
name = "auditor-priority-plugin"
version = "0.9.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Priority Plugin for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-priority-plugin"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
actix-web.workspace = true
actix-web-opentelemetry.workspace = true
anyhow.workspace = true
auditor.workspace = true
auditor-client.workspace = true
chrono.workspace = true
config.workspace = true
num-traits.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk.workspace = true
prometheus.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_with.workspace = true
shell-words.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
