[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "auditor_utilization_plugin"
version = "0.10.1"
requires-python = ">=3.9"
dependencies = [
	     "python-auditor==0.10.1",
	     "pyyaml==6.0.3",
	     "pydantic==2.12.5",
         "dotenv==0.9.9",
         "pandas==2.3.3",
]
description = "AUDITOR plugin to create cluster utilization plugin"
readme = "README.md"

[project.optional-dependencies]
style = [
      "black==25.11.0",
      "ruff==0.15.5",
]
tests = [
      "pytest==8.4.2",
      "pytest-cov==7.0.0",
      "mypy==1.19.1",
      "types-pyyaml==6.0.12.20250915",
      "pytest-asyncio==1.2.0",
      "pandas-stubs==2.2.2.240807",
      "types-python-dateutil==2.9.0.20260124",

]
build = [
      "build==1.4.0",
      "setuptools==82.0.1",
]

[project.scripts]
auditor-utilization-plugin = "auditor_utilization_plugin.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.lcov]
output = "lcov.info"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-s -v --cov --cov-report lcov"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[[tool.mypy.overrides]]
module = ["pyauditor"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]

