[package]
name = "rust_script"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust_script"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
auditor.workspace = true
chrono.workspace = true
config.workspace = true
parquet.workspace = true
secrecy.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
